--- a/app/views/application/_header.html.haml
+++ b/app/views/application/_header.html.haml
@@ -1,4 +1,4 @@
-.navbar.navbar-default.navbar-static-top{role: "navigation"}
+.navbar.navbar-inverse.navbar-static-top{role: "navigation"}
   .container
     .navbar-header
       = link_to 'Rho Pollard', root_path, class: 'navbar-brand'
