--- a/app/views/numbers/_form.html.haml
+++ b/app/views/numbers/_form.html.haml
@@ -1,5 +1,6 @@
-= simple_form_for(number, html: { class: 'form-horizontal' }) do |f|
+.col-md-12
+  = simple_form_for(number, html: { class: 'form-horizontal' }) do |f|
     = f.input :value, label: 'Large complex value'
     = f.input :np, collection: (1..10), label: 'Number of process'
     = f.input :number_of_tries, collection: (1..100), label: 'Number of tries'
-    = f.button :submit, 'Factorize number' 
+    .row= f.button :submit, 'Factorize number' 
