--- a/app/assets/stylesheets/custom.css.sass
+++ b/app/assets/stylesheets/custom.css.sass
@@ -1,4 +1,8 @@
-.form-horizontal
-  background-color: PapayaWhip  
+ 
 body
-  background-color: PapayaWhip  
+  background-color: LightGray   
+  height: 100%
+
+html
+  height: 100% 
+  
