--- a/app/views/application/home.html.haml
+++ b/app/views/application/home.html.haml
@@ -1,1 +1,12 @@
-= link_to 'Factor big number', new_number_path, class: 'btn btn-default btn-lg'
+.h2= link_to 'Factor big number', new_number_path
+.border{:style => "border-style: solid; border-width: 0.05em;" }
+.h2 
+  %strong Last factored numbers:
+-last_numbers.each do |num|
+  .h4
+    = link_to num.value, number_path(num)
+  .small  
+    Created at: 
+    = num.created_at
+  %br
+
